// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoteSession component should match VoteSession snapshot 1`] = `
<div
  className="votesession-page"
>
  <Connect(Header)
    additionalHeaderClasses="left"
    imgUrl="foo.jpg"
    subtitle="Maintenant il faut voter."
    title="Phase de vote à la majorité et estimation multicritère"
  />
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={true}
  >
    <Section
      className="themes-section"
      displayIndex={false}
      index={1}
      indexGenerator={[Function]}
      parents={Array []}
      title="Instructions de la phase de vote"
      translate={false}
    >
      <Row
        bsClass="row"
        componentClass="div"
      >
        <Col
          bsClass="col"
          componentClass="div"
          md={10}
          mdOffset={1}
          sm={10}
          smOffset={1}
        >
          <div
            className="vote-instructions"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Elisez les meilleurs propositions, vous avez 8 jetons pour et 3 jetons contre",
              }
            }
          />
          <AvailableTokens
            remainingTokensByCategory={
              Immutable.Map {
                negative: 10,
                positive: 8,
              }
            }
            tokenCategories={
              Array [
                Object {
                  "color": "#117711",
                  "id": "negative",
                  "title": "Negative",
                  "totalNumber": 10,
                },
                Object {
                  "color": "#881111",
                  "id": "positive",
                  "title": "Positive",
                  "totalNumber": 8,
                },
              ]
            }
          />
        </Col>
      </Row>
    </Section>
    <Section
      className="themes-section"
      displayIndex={false}
      index={1}
      indexGenerator={[Function]}
      parents={Array []}
      title="Vote sur 10 propositions"
      translate={false}
    >
      <Row
        bsClass="row"
        componentClass="div"
      >
        <Col
          bsClass="col"
          componentClass="div"
          md={10}
          mdOffset={1}
          sm={10}
          smOffset={1}
        >
          <Proposals
            modules={
              Array [
                Object {
                  "tokenCategories": Array [
                    Object {
                      "color": "#117711",
                      "id": "negative",
                      "title": "Negative",
                      "totalNumber": 10,
                    },
                    Object {
                      "color": "#881111",
                      "id": "positive",
                      "title": "Positive",
                      "totalNumber": 8,
                    },
                  ],
                  "voteType": "token_vote_specification",
                },
              ]
            }
            proposals={
              Array [
                Object {
                  "description": "You can't hack the alarm without connecting the primary AGP microchip!",
                  "id": "foo",
                  "title": "Foo",
                },
              ]
            }
            remainingTokensByCategory={
              Immutable.Map {
                negative: 10,
                positive: 8,
              }
            }
            tokenVotes={
              Immutable.Map {
              }
            }
            voteForProposal={[Function]}
          />
        </Col>
      </Row>
    </Section>
  </Grid>
</div>
`;

exports[`VoteSession component should match VoteSession snapshot with empty modules and proposals 1`] = `
<div
  className="votesession-page"
>
  <Connect(Header)
    additionalHeaderClasses="left"
    imgUrl="foo.jpg"
    subtitle="Maintenant il faut voter."
    title="Phase de vote à la majorité et estimation multicritère"
  />
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={true}
  >
    <Section
      className="themes-section"
      displayIndex={false}
      index={1}
      indexGenerator={[Function]}
      parents={Array []}
      title="Instructions de la phase de vote"
      translate={false}
    >
      <Row
        bsClass="row"
        componentClass="div"
      >
        <Col
          bsClass="col"
          componentClass="div"
          md={10}
          mdOffset={1}
          sm={10}
          smOffset={1}
        >
          <div
            className="vote-instructions"
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
          />
        </Col>
      </Row>
    </Section>
    <Section
      className="themes-section"
      displayIndex={false}
      index={1}
      indexGenerator={[Function]}
      parents={Array []}
      title="Vote sur 0 propositions"
      translate={false}
    >
      <Row
        bsClass="row"
        componentClass="div"
      >
        <Col
          bsClass="col"
          componentClass="div"
          md={10}
          mdOffset={1}
          sm={10}
          smOffset={1}
        >
          <Proposals
            modules={Array []}
            proposals={Array []}
            remainingTokensByCategory={
              Immutable.Map {
              }
            }
            tokenVotes={
              Immutable.Map {
              }
            }
            voteForProposal={[Function]}
          />
        </Col>
      </Row>
    </Section>
  </Grid>
</div>
`;
